--- a/InicioDeSesion.html
+++ b/InicioDeSesion.html
@@ -20,7 +20,7 @@
         <label>Contraseña</label>
         <input type="password" id="password" name="password" type="text" name="Contraseña" placeholder="Contraseña"> <br><br>
     <hr>    
-        <button type="submit">Iniciar sesion</button>
+        <a href="buscar_palabra.html" class="login-button">Iniciar sesión</a>
         <a href="Registro.html">Crear cuenta</a>
     </form>
 </body>
