--- a/Registro.html
+++ b/Registro.html
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -25,42 +25,6 @@
         <label>Repetir contraseña</label>
         <input type="password" id="password" name="password" type="text" name="Contraseña" placeholder="Contraseña"> <br><br>
     <hr>    
-        <button type="submit">Crear cuenta</button>
-        <a href="Crear cuenta.<html>
-        </html>">Crear cuenta</a>
+        <a href="InicioDeSesion.html" class="button-crear">Crear cuenta </a>
     </form>
 </body>
-=======
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <title>PAGINA</title>
-</head>
-<body>
-    <form action="IniciarSesion.html" method="POST">
-        <h1>Registro</h1>
-        <hr>
-        <i class="fa-solid fa-user"></i>
-        <label>Usuario</label>
-        <input type="text" name="Usuario" placeholder="Nombre de ususario">
-
-        <i class="fa-solid fa-unlock"></i>
-        <label>Contraseña</label>
-        <input type="password" id="password" name="password" type="text" name="Contraseña" placeholder="Contraseña"> <br><br>
-
-        <i class="fa-solid fa-unlock"></i>
-        <label>Repetir contraseña</label>
-        <input type="password" id="password" name="password" type="text" name="Contraseña" placeholder="Contraseña"> <br><br>
-    <hr>    
-        <button type="submit">Crear cuenta</button>
-        <a href="Crear cuenta.<html>
-        </html>">Crear cuenta</a>
-    </form>
-</body>
->>>>>>> 6d01c580957d0997cbecf649d0fc8c03e839afa4
-</html>
